# cddl

./: .dockerignore  .gitattributes  .gitignore  .grype.yaml  .npmrc  0.bootstrap.js  1.bootstrap.js  10.bootstrap.js  1029.app.js  1065.app.js  11.bootstrap.js  1118.a038fcae.js  1118.app.js  1122.app.js  1122.d953f9da.js  1134.app.js  1147.app.js  1156.app.js  12.bootstrap.js  1259.app.js  1282.1a06f625.js  1282.28e9e28b.js  1282.app.js  13.bootstrap.js  14.bootstrap.js  1420.32bbeba8.js  1420.app.js  1438.1b75f9b9.js  1438.app.js  1438.cfe42dbe.js  1446.app.js  1446.ce929fc1.js  1448.app.js  1471.app.js  15.bootstrap.js  1560.a8c0b3ee.js  1560.app.js  16.bootstrap.js  17.bootstrap.js  1710.53a501a9.js  (+401 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: cddl-release-drafter.yml  copilot-instructions.md  dependabot.yml  release-drafter.yml  vscode-extension-release-drafter.yml
.github/actions/get-latest-release-tag/: action.yml
.github/workflows/: anchore-analysis.yml  anchore.yml  ci-doctor.lock.yml  ci-doctor.md  ci.yml  codeql-analysis.yml  codeql.yml  compilation-check.yml  lsp-extension.yml  publish-vscode-extension.yml  publish-website.yml  publish.yml  release-binaries.yml  release-cddl.yml  release-pr.yml  release-vscode-extension.yml  release.yml  upload-binary.ps1
94/b93336c9aa/: metadata.json
94/b93336c9aa/0/: content_hash.txt  context.md  metadata.json  prompt.txt
cddl-derive/: Cargo.toml
cddl-derive/src/: codegen.rs  lib.rs
cddl-derive/tests/: cddl_attr.rs  cddl_doc_comments.rs  cddl_typegen.rs
cddl-derive/tests/fixtures/: documented.cddl  schema.cddl
cddl-lsp/: .gitignore  .npmrc  .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  shared.webpack.config.js  test-cddl-markdown.md  test-first-rule.js  webpack.config.js
cddl-lsp/client/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  webpack.config.js
cddl-lsp/client/src/: extension.ts
cddl-lsp/client/src/test/: completion.test.ts  diagnostics.test.ts  helper.ts  index.ts  runTest.ts
cddl-lsp/client/testFixture/: completion.cddl  control-operator-test.cddl  coswid-example.cddl  first-rule-root-test.cddl  formatting-test.cddl  hyphenated-identifiers.cddl  intellisense-demo.cddl  line-break-test.cddl  markdown-cddl.md  regexp.cddl  trailing-comma-test.cddl  unused-rule-test.cddl
cddl-lsp/examples/: cddl-in-docs.md
cddl-lsp/server/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  webpack.config.js
cddl-lsp/server/src/: keywords.ts  server.ts
cddl-lsp/syntaxes/: cddl-codeblock.json  cddl.tmLanguage.json
f3/af9c1be416/: metadata.json
f3/af9c1be416/0/: content_hash.txt  context.md  metadata.json  prompt.txt
src/: ast.rs  cddl.pest  codegen.rs  error.rs  faker.rs  lexer.rs  lexer_old_backup.rs  lib.rs  nom_bridge.rs  nom_parser.rs  parser.rs  parser_old_backup.rs  parser_tests.rs  pest_bridge.rs  pest_parser.rs  repl.rs  token.rs  util.rs  validator.rs  visitor.rs
src/ast/: mod.rs  parent.rs
src/error/: validation.rs
src/generator/: json.rs  mod.rs
src/validation/: cbor.rs  json.rs  mod.rs
src/validation/json/: controls.rs  mod.rs  visitor.rs
src/validator/: cbor.rs  cbor_value.rs  control.rs  csv_validator.rs  json.rs  mod.rs  parent_visitor.rs
tests/: cbor.rs  cbor_size_bug.rs  cbor_tests.rs  cddl.rs  codegen.rs  csv.rs  debug_pest.rs  debug_pest2.rs  did.rs  freezer.rs  grammar.rs  issue_249.rs  parser.rs  wasm.rs
tests/cddl/: coswid.cddl  jcrsnippet.cddl  reputon.cddl  reputon_nocommas.cddl  socketplug.cddl  test.cddl
tests/data/: mod.rs
tests/data/cddl/: byron.cddl  coswid.cddl  precedence01.cddl  reputon.cddl  shelley.cddl
tests/data/json/: reputon.json
tests/fixtures/cddl/: arrays.cddl  byron.cddl  codegen-structs.cddl  coswid.cddl  csv-sid-file.cddl  csv-simple.cddl  csv-with-header.cddl  diddoc.cddl  jcrsnippet.cddl  precedence01.cddl  reputon.cddl  reputon_nocommas.cddl  shelley.cddl  socketplug.cddl  tricky.cddl
tests/fixtures/csv/: sid-file.csv  simple.csv  with-header.csv
tests/fixtures/did/accept/: accept.cddl  accept_example1.json  accept_example2.json  accept_example3.json
tests/fixtures/did/assertionMethod/: assertionMethod.cddl  assertionMethod_example7.json
tests/fixtures/did/authentication/: authentication.cddl  authentication_example8.json  authentication_example8b.json
tests/fixtures/did/capabilityDelegation/: capabilityDelegation.cddl  capabilityDelegation_example9.json
tests/fixtures/did/capabilityInvocation/: capabilityInvocation.cddl  capabilityInvocation_example10.json
tests/fixtures/did/contentType/: contentType.json
tests/fixtures/did/context/: bad_context.json  context.cddl  context_eample1b.json  context_example1.json  context_example1a.json  example1.cbor  good_context.cbor  good_context.json
tests/fixtures/did/controller/: controller.cddl  controller_example3.json
tests/fixtures/did/created/: created.cddl  created.json
tests/fixtures/did/did/: did.cddl  did_example1.json  did_example2.json
tests/fixtures/did/did-url/: did-url.cddl  did-url_example1.json
tests/fixtures/did/didDocument/: bad-example12.cbor  bad-example1a.cbor  did-document.cddl  example1.json  example2.cbor  example2.json
tests/fixtures/did/error/: error.cddl  error_example1.json
tests/fixtures/did/ethereumAddress/: ethereumAddress.cddl  ethereumAddress_example12.json
tests/fixtures/did/id/: id.cddl  id_example2.json
tests/fixtures/did/keyAgreement/: keyAgreement.cddl
tests/fixtures/did/publicKeyBase58/: publicKeyBase58.cddl  publicKeyBase58_example.json
tests/fixtures/did/publicKeyGpg/: publicKeyGpg.cddl  publicKeyGpg_example18.json
tests/fixtures/did/publicKeyHex/: publicKeyHex.cddl  publicKeyHex_example13.json
tests/fixtures/did/publicKeyJwk/: publicKeyJwk.cddl  publicKeyJwk_example14.json  publicKeyJwk_example14b.json
tests/fixtures/did/service/: service.cddl  (+1 more)
tests/fixtures/json/: reputon.json
www/: bootstrap.js  cddl.js  editor.js  index.html  index.js  package-lock.json  package.json  webpack.config.js  webpack.config.prod.js
(+7 files in other folders)
