[package]
name = "cddl"
description = "Parser for the Concise data definition language (CDDL)"
repository = "https://github.com/anweiss/cddl"
homepage = "https://cddl.anweiss.tech"
categories = ["parser-implementations", "encoding", "development-tools", "wasm"]
license = "MIT"
version = "0.9.1"
authors = ["Andrew Weiss <andrew.weiss@outlook.com>"]
readme = "README.md"
edition = "2018"
exclude = ["cddl-lsp/**/*", "www/**/*", ".github/**/*", ".devcontainer/**/*", "pkg/**/*", ".dockerignore", "Dockerfile", "tests/**/*"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base16 = { version = "0.2.1", default-features = false }
base64 = { version = "0.21.0", default-features = false }
chrono = { version = "0.4.19", optional = true }
clap = { version = "3.1.6", optional = true, features = ["derive"] }
codespan-reporting = "0.11.1"
hexf-parse = "0.2.1"
itertools = "0.10.1"
lexical-core = "0.8.3"
regex = { version = "1.5.4", default-features = false, features = ["std"] }
regex-syntax = { version = "0.6.25", optional = true }
serde = { version = "1.0.127", optional = true, features = ["derive"] }
ciborium = { version = "0.2.0", optional = true }
serde_json = { version = "1.0.66", optional = true, default-features = false, features = ["std"] }
uriparse = { version = "0.6.3", optional = true }
base64-url = { version = "1.4.10", optional = true }
abnf_to_pest = "0.5.0"
pest_meta = "2.1.3"
pest_vm = "2.1.0"
displaydoc = { version = "0.2.3", default-features = false }
log = "0.4.14"
simplelog = "0.11.2"

[dev-dependencies]
indoc = "1.0.3"
pretty_assertions = "1.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = { version = "0.25.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
serde-wasm-bindgen = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.25"

[features]
default = ["std", "ast-span", "ast-comments", "json", "cbor", "additional-controls", "ast-parent"]
std = ["base16/alloc", "base64/alloc", "serde_json", "ciborium", "serde", "chrono", "wasm-bindgen", "serde-wasm-bindgen", "clap", "crossterm", "uriparse", "base64-url", "regex-syntax"]
lsp = ["std"]
additional-controls = []
ast-span = []
ast-comments = []
ast-parent = []
json = ["std"]
cbor = ["std"]
web = ["ast-span", "wasm-bindgen", "serde-wasm-bindgen", "serde", "ast-comments"]

[[bin]]
name = "cddl"
required-features = ["std", "json", "cbor"]
path = "src/bin/cli.rs"
test = false

[profile.release]
opt-level = "s"
lto = true

[badges]
maintenance = { status = "actively-developed" }
