[package]
name = "cddl"
description = "Parser for the Concise data definition language (CDDL)"
repository = "https://github.com/anweiss/cddl"
homepage = "https://cddl.anweiss.tech"
categories = ["parser-implementations", "encoding", "development-tools", "wasm"]
license = "MIT"
version = "0.10.2"
authors = ["Andrew Weiss <andrew.weiss@outlook.com>"]
readme = "README.md"
edition = "2018"
exclude = [
    "cddl-lsp/**/*",
    "www/**/*",
    ".github/**/*",
    ".devcontainer/**/*",
    "pkg/**/*",
    ".dockerignore",
    "Dockerfile",
    "tests/**/*",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base16 = { version = "0.2.1", default-features = false }
# base64 = { version = "0.21.0", default-features = false }
data-encoding = { version = "2.10.0", default-features = false }
chrono = { version = "0.4.43", optional = true }
clap = { version = "4.5", optional = true, features = ["derive"] }
codespan-reporting = "0.12.0"
hexf-parse = "0.2.1"
itertools = "0.14.0"
regex = { version = "1.11.2", default-features = false, features = [
    "std",
    "unicode-perl",
] }
regex-syntax = { version = "0.8.6", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
ciborium = { version = "0.2.0", optional = true }
ciborium-ll = { version = "0.2.0", optional = true }
ciborium-io = { version = "0.2.0", optional = true }
serde_json = { version = "1.0.145", optional = true, default-features = false, features = [
    "std",
] }
uriparse = { version = "0.6.3", optional = true }
base64-url = { version = "3.0.2", optional = true }
base45 = { version = "3.0.1", optional = true }
hex = { version = "0.4.3", optional = true }
abnf_to_pest = "0.5.1"
pest_meta = "2.8.3"
pest_vm = "2.8.0"
pest = "2.8.0"
pest_derive = "2.8.0"
displaydoc = { version = "0.2.3", default-features = false }
log = "0.4.28"
simplelog = "0.12.1"

[dev-dependencies]
indoc = "2.0.7"
pretty_assertions = "1.2.0"
wasm-bindgen-test = "0.3.34"
hex = "0.4.3"                # Add hex crate for tests

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-test = "0.3.34"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = ["console"] }

[features]
default = [
    "std",
    "ast-span",
    "ast-comments",
    "json",
    "cbor",
    "additional-controls",
    "ast-parent",
    "wasm-bindgen",
]
std = [
    "base16/alloc",
    "data-encoding/alloc",
    "serde_json",
    "ciborium",
    "ciborium-ll",
    "ciborium-io",
    "serde",
    "chrono",
    "wasm-bindgen",
    "serde-wasm-bindgen",
    "clap",
    "uriparse",
    "base64-url",
    "base45",
    "hex",
    "regex-syntax",
]
lsp = ["std"]
additional-controls = []
ast-span = []
ast-comments = []
ast-parent = []
json = ["std"]
cbor = ["std"]

[[bin]]
name = "cddl"
required-features = ["std", "json", "cbor"]
path = "src/bin/cli.rs"

[profile.release]
opt-level = "s"
lto = true

[badges]
maintenance = { status = "actively-developed" }
